<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:orientation="vertical"
    tools:context=".signUp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/signUp"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signUpFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/fname"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="?attr/colorButtonNormal" />

        <EditText
            android:id="@+id/signUpSName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/sname"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="?attr/colorButtonNormal" />

        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:padding="15dp"
            android:textColorHint="?attr/colorButtonNormal" />

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:padding="15dp"
            android:textColorHint="?attr/colorButtonNormal" />


        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:singleLine="true"
            android:text="@string/signUp"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />


            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/log"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>